# Cierre_Turno

./: .gitignore  README.md  app.py  app.spec  config.py  fds_ui.html  informe_fds_email.html  pyproject.toml  requirements.txt
backups/: T.html  Test.html
controllers/: main_controller.py
database/: db.py
database/models/: __init__.py  actividad_diaria.py  auditoria.py  borrador_incidencia.py  incidencia.py  maquina.py  tecnico.py  tipo_actividad.py  tipo_problema.py
logs/: sistema_fds.log.2026-07-19  sistema_fds.log.2026-07-20
resources/styles/: app.qss
services/: __init__.py  actividades_db.py  admin.py  auditoria.py  backup.py  borradores.py  configuracion.py  email_renderer.py  exportar.py  exportar_actividades.py  incidencias.py  maquinas.py  outlook.py  smtp_profiles.py  smtp_sender.py  tecnicos_db.py  tipos_actividad_db.py  tipos_problema_db.py
templates/: fds_ui.html  informe_fds_email.html
tests/: smoke_db.py  smoke_end_to_end.py  smoke_layout_nuevo.py  smoke_resultado_coherente.py  smoke_ui.py
ui/: actividad_form_dialog.py  actividades_dialog.py  bottom_table.py  correo_tab.py  dashboard_bar.py  empresa_tab.py  firmante_dialog.py  footer.py  form_panel.py  helpers.py  import_dialog.py  logger.py  machine_panel.py  main_window.py  maquinas_problematicas_dialog.py  maquinas_problematicas_tab.py  maquinas_tab.py  obs_widget.py  preview_dialog.py  search_history.py  search_panel.py  settings_dialog.py  shortcuts.py  tecnicos_tab.py  tipos_actividad_tab.py  tipos_problema_tab.py  topbar.py  widgets.py
