[project]
name = "sistema-fds"
version = "0.1.0"
description = "Sistema de Registro de Maquinas Fuera de Servicio - Casino Ovalle"
requires-python = ">=3.12"
readme = "README.md"

[tool.setuptools.packages.find]
include = ["database*", "services*", "ui*", "controllers*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"